<resources>
    <!-- App Name -->
    <string name="app_name">QuickDice</string>
    <string name="dev_name">Grant Williams</string>

    <!-- Buttons -->
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="custom">Custom Roll</string>
    <string name="number">##</string>

    <!-- Custom Dice -->
    <string-array name="dice_array">
        <item>D4</item>
        <item>D6</item>
        <item>D8</item>
        <item>D10</item>
        <item>D12</item>
        <item>D20</item>
        <item>D100</item>
    </string-array>

</resources>