<?xml version="1.0" encoding="utf-8"?>

    <!-- Setup -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF"
    tools:context=".MainActivity">

    <!-- Result of Dice Roll (Top Text) -->
    <TextView
        android:id="@+id/sum_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#00FF0000"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dice to be Rolled (Bottom Text) -->
    <TextView
        android:id="@+id/sides_and_rolls_text"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/dev_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@+id/d20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sum_text" />

    <!-- Button Characteristics -->

    <!-- D4 -->
    <Button
        android:id="@+id/d4"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d4"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d10"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- D6 -->
    <Button
        android:id="@+id/d6"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d6"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d8"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- D8 -->
    <Button
        android:id="@+id/d8"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d8"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d12"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- D10 -->
    <Button
        android:id="@+id/d10"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d10"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d100"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- D12 -->
    <Button
        android:id="@+id/d12"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d12"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d100"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- D20 -->
    <Button
        android:id="@+id/d20"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d20"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/d4"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- D100 -->
    <Button
        android:id="@+id/d100"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/d100"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- Custom Die -->

    <!-- Custom Button -->
    <Button
        android:id="@+id/dCustom"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/custom"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Which Die to Use -->

    <!-- How Many Dice to Roll -->
    <Spinner
        android:id="@+id/dice_spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="110dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/dCustom"
        app:layout_constraintEnd_toStartOf="@+id/num_rolls" />

    <EditText
        android:id="@+id/num_rolls"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="#"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/dCustom"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>